test/fail/bad-actor-import2.mo
import imported1 "mailto:foo@example.com";

//SKIP run
//SKIP run-ir
//SKIP run-low
//SKIP comp

